--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
     <footer class="pie">
         <label class="texto-pie">Usted está navegando sin iniciar sesión. <a href="iniciarsesion.html" class="enlace-pie">Iniciar sesión.</a></label>
         <label class="texto-pie">Todos los derechos reservados C/Share ©</label>
+        <a href="indexsesion.html">Index Sesion</a> 
     </footer>
 </body>
+
 </html>
